Updated portfolio design

--- a/index.html
+++ b/index.html
@@ -3,63 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joe's Protfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <!--Navigator-->
-    <div class="box -1">
-        <ul id="navigator">
-            <a href="https://github.com/gameboyjoe2" target="_blank">github</a>
-            <a href="https://www.linkedin.com/in/joe-lui-491a40365/" target="_blank">Linkedin</a>
-        </ul>
-    </div>
+
 
     <div>
         <!--Home-->
-        <div id="homeIntro">
-            <h1>Hello,I am Joe! Wellcome to my protfolio</h1>
+        <div >
+            <h1 id="name">Joe Lui</h1><br>
+            <h2 id="aSnD">A Student & Web Developer</h2>
         </div>
 
+            <h2 id="about">About</h2>
 
+            <div class="box-1">
+                <div class="box-2">
+                    <h3 >
+                        A CS student passionate about building practical tech solutions. I thrive on turning complex problems into clean code while exploring AI, web dev, and system design. When not coding, I'm optimizing workouts as diligently as my algorithms. Seeking opportunities to grow and create impactful technology. Let's connect and build something great!                    </h3>
+                </div>
+                <div class="box-2">
+                    <img src="myphoto.jpg" alt="joe" id="myphoto">
+                </div>
+            </div>
+            
 
         <!--About-->
-        <div class="slides">
-            <h2 class="subtitle">About</h2>
+                    
 
-            <!--MyPhoto-->
-            <div id="myphoto">
-                <img src="myphoto.jpg" alt="Trulli" width="50%" height="50%">
-            </div>
+                <h3 class="section">Contact Information</h3>
 
-            <h3>Hi, I’m Joe Lui, a Computer Science student with a passion for unraveling how technology works—from algorithms to sleek user interfaces. Though I’m just starting my journey in the IT world, I’m already hooked on problem-solving and building small projects that bridge theory and practice.
-
-                <p>When I’m not debugging code or studying, you’ll find me:
-                    <p>
-                        🔧 Exploring new tech—whether it’s diving into frameworks, tinkering with APIs, or testing AI tools.</br>
-                        💪 Working out—because a healthy mind needs a healthy body (and squats > spaghetti code).
-                    </p>
-                </p>
-                I’m eager to collaborate, learn, and grow. Let’s connect and create something cool together!
-            </h3>
-            </br>
-            <h2 class="subtitle">
-                Student & Web Developer 
-                </br> 
-                <h3 class="section">Currently studying in University of Wollongong College Hong Kong</h3>
-            </h2>
-            </br>
                 <ul>
                     <li>Phone: +852 6628 5695</li>
                     <li>City: Hong Kong SAR</li>
                     <li>Degree: Bachelors of Computer Science</li>
                     <li>Email: joe2001lui@gmail.com</li>
                 </ul>
-        </div>
-
+        <br>
+        <br>
+        <br>
+        <br>
         <!--Skill-->
         <div class="slides">
-            <h2 class="subtitle">Skills <br> </h2>
+            <h2 id="skill">Skills <br> </h2>
             <h3 class="section">Below listed are some of the skills that I have.</h3>
             <h3>
                 <ul>
@@ -69,10 +56,13 @@
                 </ul>
             </h3>
         </div>
-
+        <br>
+        <br>
+        <br>
+        <br>
         <!--Resume-->
         <div class="slides">
-            <h2 class="subtitle">Resume</h2>
+            <h2 class="section">Resume</h2>
             <h3>
                 Education
                 </br>
@@ -103,6 +93,9 @@
                 </ul>
             </h3>
             <br>
+            <br>
+            <br>
+            <br>
             <h3>
                 Experience
                 <br>
@@ -126,12 +119,19 @@
                 </ul>
             </h3>
         </div >
-
+        <br>
+        <br>
+        <br>
+        <br>
         <!--Contact-->
-        <div class="slides">
-            <h2 class="subtitle"></h2>
-            <h3 class="section"></h3>
-        </div>
+        <h2>My Links</h2>
+            <div id="navigator">
+                <a href="https://github.com/gameboyjoe2" target="_blank" class="action-button">github</a>
+                <a href="https://www.linkedin.com/in/joe-lui-491a40365/" target="_blank" class="action-button">Linkedin</a>
+            </div>
+        <br>
+        <br>
+        <br>
     </div>
 
 
